--- a/third-party-plugins/cccs_plugins/cccs_fairness_classification_2.0/widgets/interpretation_selected_metrics.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_fairness_classification_2.0/widgets/interpretation_selected_metrics.mdx
@@ -50,7 +50,7 @@ export const GetInterpretation = ({ data, container, results }) => {
   <div>
     <b>What it means:</b>
     <br/>
-    The test results enable the Company to help its stakeholder understand if the model is able to predict the outcomes fairly among the demographic groups.
+    The test results enable the business to understand if the model is able to predict the outcomes fairly among the target groups. 
     <GetInterpretation
       data={props.getIBData(ib_cid, gid)}
       container={props.container}
