--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/accessibility.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/accessibility.mdx
@@ -6,7 +6,7 @@
 </div>
 <br/>
 <h3 className="c-secondary">Testable Criteria 2.1.0: Restricting access to essential inputs</h3>
-<b>Outcome: A dominant developer/deployer should not limit or exclude the access of  competing AI developers/deployers to   resources which are essential to the development of AI models (e.g. performance related hardware such as chips, proprietary training data, access to cloud services or specialized APIs).</b>
+<b>Outcome: A dominant business should not limit or exclude the access of competing AI developers/deployers to   resources which are essential to the development of AI models (eg. performance related hardware such as chips, proprietary training data, access to cloud services or specialized APIs).</b>
 
 <table>
   <tbody>
@@ -19,8 +19,8 @@
     </tr>
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>2.1.1</td>
-      <td style={{paddingBottom: "15px"}}>Does the company ensure that it does not use its dominant position in one market to unduly restrict access to data or resources necessary for competing AI model developers in other downstream markets?</td>
-      <td style={{paddingBottom: "15px"}}>Checks if the company has leveraged its dominance in one market to unfairly limit access to data or resources for competing AI model developers in other markets.</td>
+      <td style={{paddingBottom: "15px"}}>If the business has a dominant position in any market, does the business ensure that it does not use its dominant position in one market to unduly restrict access to data or resources necessary for competing AI model developers in other downstream markets?</td>
+      <td style={{paddingBottom: "15px"}}>Checks if the business has leveraged its dominance in one market to unfairly limit access to data or resources for competing AI model developers in other markets.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="2_1_1" value={props.data["2_1_1"]} onChange={(e)=>props.onChangeData("2_1_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
@@ -35,7 +35,7 @@
     </tr>
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>2.1.2</td>
-      <td style={{paddingBottom: "15px"}}>Does the company conduct regular assessments to evaluate its data access policies to allow competing AI model developers or new entrants to compete fairly?</td>
+      <td style={{paddingBottom: "15px"}}>If the business has a dominant position in any market, does the business conduct regular assessments to evaluate its data access policies to allow competing AI model developers or new entrants to compete fairly?</td>
       <td style={{paddingBottom: "15px"}}>Regular assessments of data access policies ensures that there are no unfair limitations to data or resources for developers in other markets.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="2_1_2" value={props.data["2_1_2"]} onChange={(e)=>props.onChangeData("2_1_2",e.target.value)}>
@@ -51,7 +51,7 @@
     </tr>
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>2.1.3</td>
-      <td style={{paddingBottom: "15px"}}>Does the AI developer ensure that there are no exclusive agreements with multiple downstream deployers which may potentially restrict new developers from operating at a viable scale and discourage market entry?</td>
+      <td style={{paddingBottom: "15px"}}>If the AI developer has a dominant position, does the AI developer ensure that there are no exclusive agreements with multiple downstream deployers which may potentially restrict new developers from operating at a viable scale and discourage market entry?</td>
       <td style={{paddingBottom: "15px"}}>Checks whether a dominant AI developer has exclusive dealings with multiple deployers downstream that may deter entry of new AI developers.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="2_1_3" value={props.data["2_1_3"]} onChange={(e)=>props.onChangeData("2_1_3",e.target.value)}>
@@ -69,7 +69,7 @@
 </table>
 
 <h3 className="c-secondary">Testable Criteria 2.2.0: Restricting access of AI products and services</h3>
-<b>Outcome: A dominant developer/deployer should not unjustifiably restrict access to its products and services</b>
+<b>Outcome: A dominant business should not unjustifiably restrict access to its products and services</b>
 
 <table>
   <tbody>
@@ -82,8 +82,8 @@
     </tr>
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>2.2.1</td>
-      <td style={{paddingBottom: "15px"}}>Does the company ensure non-discriminatory access to its AI products and services for downstream deployers and consumers?</td>
-      <td style={{paddingBottom: "15px"}}>Ensure that a dominant developer/deployer maintains non-discriminatory access to its AI products and services.</td>
+      <td style={{paddingBottom: "15px"}}>If the business has a dominant position in any market, does the business ensure non-discriminatory access to its AI products and services for downstream deployers and consumers?</td>
+      <td style={{paddingBottom: "15px"}}>Ensure that a dominant business maintains non-discriminatory access to its AI products and services.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="2_2_1" value={props.data["2_2_1"]} onChange={(e)=>props.onChangeData("2_2_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
@@ -100,7 +100,7 @@
 </table>
 
 <h3 className="c-secondary">Testable Criteria 2.3.0: Access to data</h3>
-<b>Outcome: A dominant developer/deployer should not use data collection practices to unfairly restrict competition</b>
+<b>Outcome: A dominant business should avoid data collection practices to unfairly restrict competition, especially where such collection is not necessary for provision of the product or the service</b>
 
 <table>
   <tbody>
@@ -113,8 +113,8 @@
     </tr>
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>2.3.1</td>
-      <td style={{paddingBottom: "15px"}}>Where collection of data from users could be used to improve a company’s AI models and strengthen its market position, does the company ensure that it obtains explicit user consent for data collection and does not mandate data collection from users as a condition for accessing services without clear opt-out mechanisms?</td>
-      <td style={{paddingBottom: "15px"}}>Ensure that a dominant developer/deployer does not make use of mandatory data collection practices to exclusively accumulate large amounts of user data to improve its AI models, potentially raising barriers to entry for competitors.</td>
+      <td style={{paddingBottom: "15px"}}>If the business has a dominant position in any market and where the collection of data from users could be used to improve a business’s AI models and strengthen its market position, does the business ensure that it obtains explicit user consent for data collection and does not mandate data collection from users as a condition for accessing services without clear opt-out mechanisms?</td>
+      <td style={{paddingBottom: "15px"}}>Ensure that a dominant business does not make use of mandatory data collection practices to exclusively accumulate large amounts of user data to improve its AI models, potentially raising barriers to entry for competitors.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="2_3_1" value={props.data["2_3_1"]} onChange={(e)=>props.onChangeData("2_3_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
