--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/accountability.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/accountability.mdx
@@ -1,9 +1,9 @@
 {/* Input Block Page */}
 <div className="aiv-panel">
-  <h2>Process Checklist Principle 7.0.0: ccountability (General good practice)</h2>
+  <h2>Process Checklist Principle 7.0.0: Accountability (General good practice)</h2>
 </div>
 <br/>
-<h3 className="c-secondary">Testable Criteria 7.1.0: Lack of adequate accountability by  the company</h3>
+<h3 className="c-secondary">Testable Criteria 7.1.0: Lack of adequate accountability by the business</h3>
 <b>Outcome: There should be clear and proper allocation of accountability in the event that the model makes decisions that harms competition or consumers.</b>
 
 <table>
@@ -18,8 +18,8 @@
 
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>7.1.1</td>
-      <td style={{paddingBottom: "15px"}}>Are there mechanisms in place to determine the proper allocation of accountability and responsibility for any potential competition or consumer issues arising from the AI model (for e.g. clear internal governance mechanisms to ensure clear roles and responsibilities by the organisation and/or clear responsibilities between different parties within the broader supply chain – partners, suppliers, customers, third parties)?</td>
-      <td style={{paddingBottom: "15px"}}>Ensure that the company has the accountability and incentive to improve consumers’ experience.</td>
+      <td style={{paddingBottom: "15px"}}>Are there mechanisms in place to determine the proper allocation of accountability and responsibility for any potential competition or consumer issues arising from the AI model (for eg. clear internal governance mechanisms to ensure clear roles and responsibilities by the organisation and/or clear responsibilities between different parties within the broader supply chain – partners, suppliers, customers, third parties)?</td>
+      <td style={{paddingBottom: "15px"}}>Ensure that the business has the accountability and incentive to improve consumers’ experience.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="7_1_1" value={props.data["7_1_1"]} onChange={(e)=>props.onChangeData("7_1_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
@@ -35,7 +35,7 @@
 
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>7.1.2</td>
-      <td style={{paddingBottom: "15px"}}>Does the company provide clear and easily accessible information to consumers about the available routes for should issues or negative experiences with AI products or services arise?</td>
+      <td style={{paddingBottom: "15px"}}>Does the business provide clear and easily accessible information to consumers about the available routes for should issues or negative experiences with AI products or services arise?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that clear information about routes to redress are provided to consumers for issues that can occur.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="7_1_2" value={props.data["7_1_2"]} onChange={(e)=>props.onChangeData("7_1_2",e.target.value)}>
