--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/fairness.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/fairness.mdx
@@ -4,7 +4,7 @@
 </div>
 <br/>
 <h3 className="c-secondary">Testable Criteria 4.1.0: Discrimination against certain target groups </h3>
-<b>Outcome: Ensure training data is diverse and representative to prevent potential AI-driven exclusionary practices  byfirms and  discriminatory treatment of consumers.</b>
+<b>Outcome: Ensure training data is diverse and representative to prevent potential AI-driven exclusionary practices by firms and discriminatory treatment of consumers.</b>
 
 <table>
   <tbody>
@@ -18,11 +18,11 @@
 
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>4.1.1</td>
-      <td style={{paddingBottom: "15px"}}>Has the company established a strategy or a set of procedures to check that the data used in the training of the AI model, is representative of the population who make up the end-users of the AI model? This could include, for example, ensuring: 
-      <br />-Diverse demographic representation to avoid bias<br />
-      <br />-Adequate sample sizes for all relevant user segments<br />
-      <br />-Regular data drifts and representation audits to maintain fairness over time<br /></td>
-      <td style={{paddingBottom: "15px"}}>Ensure training data is diverse and representative in order to avoid biasness against certain groups, firms or individuals. </td>
+      <td style={{paddingBottom: "15px"}}>Has the business established a strategy or a set of procedures to check that the data used in the training of the AI model, is representative of the population who make up the end-users of the AI model? This could include, for example, ensuring: 
+      <br />-Diverse demographic representation to avoid bias
+      <br />-Adequate sample sizes for all relevant user segments
+      <br />-Regular data drifts and representation audits to maintain fairness over time</td>
+      <td style={{paddingBottom: "15px"}}>Ensure training data is diverse and representative in order to avoid biasness against certain groups, firms or individuals.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="4_1_1" value={props.data["4_1_1"]} onChange={(e)=>props.onChangeData("4_1_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
@@ -40,7 +40,7 @@
 </table>
 
 <h3 className="c-secondary">Testable Criteria 4.2.0: Favouring certain brands/products over others</h3>
-<b>Outcome: If the company considers itself to be dominant, the company’s AI model should not unfairly prioritize or favour certain brands/products (including own products) over others without objective justifications.</b>
+<b>Outcome: If the business is dominant, its AI model should not unfairly prioritize or favour certain brands/products (including own products) over others without objective justifications.</b>
 
 <table>
   <tbody>
@@ -54,7 +54,7 @@
 
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>4.2.1</td>
-      <td style={{paddingBottom: "15px"}}>Is the AI model's decision-making process purely based on input data and does not unduly favour specific brands or products?</td>
+      <td style={{paddingBottom: "15px"}}>Is the dominant business’s AI model decision-making process purely based on input data and does not unduly favour specific brands or products?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that the AI model does not unduly favor specific brands or products, and the decision-making process should be based on inputs only.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="4_2_1" value={props.data["4_2_1"]} onChange={(e)=>props.onChangeData("4_2_1",e.target.value)}>
@@ -71,7 +71,7 @@
 
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>4.2.2</td>
-      <td style={{paddingBottom: "15px"}}>Does the AI model's decision-making process prioritise the company's own product as compared to other competitors?</td>
+      <td style={{paddingBottom: "15px"}}>Does the dominant business’s AI model decision-making process prioritise the business's own product as compared to other competitors?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that the AI model does not self-preference.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="4_2_2" value={props.data["4_2_2"]} onChange={(e)=>props.onChangeData("4_2_2",e.target.value)}>
@@ -88,8 +88,8 @@
 
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>4.2.3</td>
-      <td style={{paddingBottom: "15px"}}>Does the AI model undergo regular bias testing and impact assessments to mitigate potential bias outcomes?</td>
-      <td style={{paddingBottom: "15px"}}>Ensure that the company conducts regular bias testing and impact assessments to prevent favouring of certain brands/products.</td>
+      <td style={{paddingBottom: "15px"}}>Does the dominant business’s AI model undergo regular bias testing and impact assessments to mitigate potential bias outcomes?</td>
+      <td style={{paddingBottom: "15px"}}>Ensure that the business conducts regular bias testing and impact assessments to prevent favouring of certain brands/products.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="4_2_3" value={props.data["4_2_3"]} onChange={(e)=>props.onChangeData("4_2_3",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
@@ -105,8 +105,8 @@
 
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>4.2.4</td>
-      <td style={{paddingBottom: "15px"}}>Is there a mechanism in place to address and rectify any instances of favouritism or discrimination identified in the AI model's outputs?</td>
-      <td style={{paddingBottom: "15px"}}>Ensure that the company has a clear mechanism for addressing and rectifying instances of favoritism or discrimination.</td>
+      <td style={{paddingBottom: "15px"}}>Is there a mechanism in place to address and rectify any instances of favouritism or discrimination identified in the dominant business’s AI model's outputs?</td>
+      <td style={{paddingBottom: "15px"}}>Ensure that the business has a clear mechanism for addressing and rectifying instances of favoritism or discrimination.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="4_2_4" value={props.data["4_2_4"]} onChange={(e)=>props.onChangeData("4_2_4",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
