--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/accuracy_UR_widget.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/accuracy_UR_widget.mdx
@@ -5,13 +5,13 @@ export const ib_cid = "accuracy"
 </div>
 <br/>
 <h2 className="c-primary">Testable Criteria 8.1.0: Model Reliability</h2>
-<h3>Outcome: The company should ensure that AI models are reliable (producing accurate and dependable outputs consistently) and free from harmful or fake content to improve consumer trust.</h3><br/>
+<h3>Outcome: The business should ensure that AI models are reliable (producing accurate and dependable outputs consistently) and free from harmful or fake content to improve consumer trust.</h3><br/>
 
 <table style={{border:"1px solid black", borderCollapse:"collapse"}}>
   <tr>
     <td style={{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">8.1.1\) Question</b><br/>
-      Has the company established a strategy to ensure that the AI system is safe, and does not generate content that violates laws and regulations or is harmful?
+      Has the business established a strategy to ensure that the AI system is safe, and does not generate content that violates laws and regulations or is harmful?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
@@ -36,7 +36,7 @@ export const ib_cid = "accuracy"
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">8.1.2\) Question</b><br/>
-       Has the company established clear processes for handling and correcting errors or inaccuracies identified in the AI model's outputs? (e.g. root cause analysis, model retraining, human-in-the-loop review)
+       Has the business established clear processes for handling and correcting errors or inaccuracies identified in the AI model's outputs? (eg. root cause analysis, model retraining, human-in-the-loop review)
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
@@ -61,11 +61,11 @@ export const ib_cid = "accuracy"
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">8.1.3\) Question</b><br/>
-       Is the company actively investing in research and development to improve the reliability and accuracy of its AI models, and does it prioritize the continuous enhancement of model performance?
+       Is the business actively investing in research and development to improve the reliability and accuracy of its AI models, and does it prioritize the continuous enhancement of model performance?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      Ensure that the company is actively investing in improving reliability and accuracy of AI models.
+      Ensure that the business is actively investing in improving reliability and accuracy of AI models.
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
@@ -83,14 +83,14 @@ export const ib_cid = "accuracy"
 <br/>
 
 <h2 className="c-primary">Testable Criteria 8.2.0: Model Reproducibility</h2>
-<h3>Outcome: The company should ensure that the results are consistent and able to be replicated by the owner or third party to improve consumer trust.</h3><br/>
+<h3>Outcome: The business should ensure that the results are consistent and able to be replicated by the business or third party to improve consumer trust.</h3><br/>
 
 <table style={{border:"1px solid black", borderCollapse:"collapse"}}>
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">8.2.1\) Question</b><br/>
-       Has the company put in place methods to record the provenance of the AI model, including the various versions, configurations, data transformations, and underlying source code?
-    </td>
+      Has the business put in place methods to record the provenance of the AI model, including the various versions, configurations, data transformations, and underlying source code?
+</td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
       Ensure that documentations are kept for the different versions of the model. 
@@ -114,7 +114,7 @@ export const ib_cid = "accuracy"
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">8.2.2\) Question</b><br/>
-       Has the company established a strategy for reproducing the input data used in the training process for every model?
+       Has the business established a strategy for reproducing the input data used in the training process for every model?
 
         Strategy includes:
         - data cleaning, data processing, and feature engineering
@@ -144,7 +144,7 @@ export const ib_cid = "accuracy"
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">8.2.3\) Question</b><br/>
-       Has the company conducted an assessment for repeatability by reviewing if the model produces a consistent output based on the same input? 
+       Has the business conducted an assessment for repeatability by reviewing if the model produces a consistent output based on the same input? 
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
