--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/diversity_UR_widget.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/diversity_UR_widget.mdx
@@ -11,11 +11,11 @@ export const ib_cid = "diversity"
   <tr>
     <td style={{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">6.1.1\) Question</b><br/>
-      Does the company offer a diverse range of business models for its AI models, including both open-source and closed-source options, to provide a wide array of choices for consumers, and to drive innovation across the market?
+      Does the business offer a diverse range of business models for its AI models, including both open-source and closed-source options, to provide a wide array of choices for consumers, and to drive innovation across the market?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      The company could consider providing both open and closed source models to drive innovation and provide more choices for consumers.
+      The business could consider providing both open and closed source models to drive innovation and provide more choices for consumers. 
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
@@ -39,11 +39,11 @@ export const ib_cid = "diversity"
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">6.2.1\) Question</b><br/>
-      Does the company actively engage with the open-source community, seeking feedback and contributions to improve open-source AI models, and does it support collaborative development efforts to drive innovation and advancement in the field?
+      Does the business actively engage with the open-source community, seeking feedback and contributions to improve open-source AI models, and does it support collaborative development efforts to drive innovation and advancement in the field?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      The company could consider actively engaging with the open-source community, seeking feedback and contributions to improve open-source AI models, supporting collaborative efforts.
+      The business could consider actively engaging with the open-source community, seeking feedback and contributions to improve open-source AI models, supporting collaborative efforts.
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
@@ -64,11 +64,11 @@ export const ib_cid = "diversity"
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">6.2.2\) Question</b><br/>
-      Does the company ensure that these open-source models are made accessible in a non-discriminatory manner that reduces barriers to entry and expansion?
+      Does the business ensure that these open-source models are made accessible in a non-discriminatory manner that reduces barriers to entry and expansion (eg. avoiding unjustified geographic or demographic restrictions)?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      Ensure that open-source models by the company are made accessible in a non-discriminatory manner that reduces barriers to entry and expansion.
+      Ensure that open-source models by the business are made accessible in a non-discriminatory manner that reduces barriers to entry and expansion.
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
