--- a/third-party-plugins/cccs_plugins/cccs_fairness_classification_2.0/widgets/summary_recommendation.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_fairness_classification_2.0/widgets/summary_recommendation.mdx
@@ -48,7 +48,7 @@ export const GetInterpretation = ({ data, container, results }) => {
   <div>
     <b>What it means:</b>
     <br/>
-    The test results enable the Company to help its stakeholder understand if the model is able to predict the outcomes fairly among the demographic groups.
+    The test results enable the business to understand if the model is able to predict the outcomes fairly among the target groups. 
     <GetInterpretation
       data={props.getIBData(ib_cid, gid)}
       container={props.container}
@@ -59,7 +59,8 @@ export const GetInterpretation = ({ data, container, results }) => {
 <div>
     <h4><b>Recommendations:</b> </h4>
 
-    <p>The test results enable the company to understand if the model is able to predict the outcomes fairly among the target groups. If the parity is unacceptable, consider doing the following:</p>
+    <p>The test results enable the business to understand if the model is able to predict the outcomes fairly among the target groups.</p>
+    <p>If the parity is unacceptable, consider doing the following:</p>
     <ol>
         <li>Review your dataset to identify any inherent bias in the dataset.</li>
         <li>Review your model parameters and algorithms.</li>
@@ -68,9 +69,9 @@ export const GetInterpretation = ({ data, container, results }) => {
 
     The potential use cases (non-exhaustive) are as follows:
 <p><u>Detecting presence of unfair treatment of model to downstream competitors </u> </p>
-<p>If the selected feature is “competitor”, for example, the AI company should ensure that the AI model's predictions do not result in a higher number of false positives for downstream competitors compared to its own subsidiary. By doing so, the company may be leveraging its market power in the upstream market to accord favourable treatment to its subsidiary. If the company considers itself to be dominant, it should review the AI algorithm to avoid potentially infringing Section 47 of the Competition Act, which prohibits the abuse of a dominant market position that is not based on fair competition and perpetuates the dominant position of the business.</p>
+<p>If the selected feature is “competitor”, for example, the business should ensure that the AI model's predictions do not result in a higher number of false positives for downstream competitors compared to its own subsidiary. By doing so, the business may be leveraging its market power in the upstream market to accord favourable treatment to its subsidiary. If the business is dominant, it should review the AI algorithm to avoid potentially infringing Section 47 of the Competition Act, which prohibits the abuse of a dominant market position that is not based on fair competition and perpetuates the dominant position of the business.</p>
 
-<p><u>Detect presence of unfair treatment of model to specific demographics, which may result in false or misleading claims being made if not disclosed adequately</u></p>
-<p>If the selected feature is "gender", for example, the AI company should ensure that the AI model's predictions do not result in a higher number of false positives for one gender over the other. Any limitation in the prediction of the model should be clearly and accurately informed to users, so that they would not be misled by the results. Any false or misleading claims made in this regard to consumers could be an unfair practice as defined under the Consumer Protection (Fair Trading) Act.</p>
+<p><u>Detect presence of unfair treatment of model to specific demographics, which may result in false or misleading claims being made if not disclosed adequately.</u></p>
+<p>If the selected feature is gender, for example, the business should ensure that the AI model's predictions do not result in a higher number of false positives for one gender over the other. Any limitation in the prediction of the model should be clearly and accurately informed to users, so that they would not be misled by the results. If the business is making false or misleading claims or failing to disclose any limitations, the business could be found to have engaged in an unfair practice under the Consumer Protection (Fair Trading) Act.</p>
 </div>
 </>
