--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/accuracy.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/accuracy.mdx
@@ -4,7 +4,7 @@
 </div>
 <br/>
 <h3 className="c-secondary">Testable Criteria 8.1.0: Model Reliability</h3>
-<b>Outcome: The company should ensure that AI models are reliable (producing accurate and dependable outputs consistently) and free from harmful or fake content to improve consumer trust.</b>
+<b>Outcome: The business should ensure that AI models are reliable (producing accurate and dependable outputs consistently) and free from harmful or fake content to improve consumer trust.</b>
 
 <table>
   <tbody>
@@ -18,7 +18,7 @@
 
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>8.1.1</td>
-      <td style={{paddingBottom: "15px"}}>Has the company established a strategy to ensure that the AI system is safe, and does not generate content that violates laws and regulations or is harmful?</td>
+      <td style={{paddingBottom: "15px"}}>Has the business established a strategy to ensure that the AI system is safe, and does not generate content that violates laws and regulations or is harmful?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that mechanisms are in place to ensure that information generate is as accurate as possible and not misleading.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="8_1_1" value={props.data["8_1_1"]} onChange={(e)=>props.onChangeData("8_1_1",e.target.value)}>
@@ -35,7 +35,7 @@
 
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>8.1.2</td>
-      <td style={{paddingBottom: "15px"}}>Has the company established clear processes for handling and correcting errors or inaccuracies identified in the AI model's outputs? (e.g. root cause analysis, model retraining, human-in-the-loop review)</td>
+      <td style={{paddingBottom: "15px"}}>Has the business established clear processes for handling and correcting errors or inaccuracies identified in the AI model's outputs? (eg. root cause analysis, model retraining, human-in-the-loop review)</td>
       <td style={{paddingBottom: "15px"}}>Ensure that there are established procedures to identify, address, and correct any errors or inaccuracies in the model's outputs in a timely manner.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="8_1_2" value={props.data["8_1_2"]} onChange={(e)=>props.onChangeData("8_1_2",e.target.value)}>
@@ -52,8 +52,8 @@
 
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>8.1.3</td>
-      <td style={{paddingBottom: "15px"}}>Is the company actively investing in research and development to improve the reliability and accuracy of its AI models, and does it prioritize the continuous enhancement of model performance?</td>
-      <td style={{paddingBottom: "15px"}}>Ensure that the company is actively investing in improving reliability and accuracy of AI models.</td>
+      <td style={{paddingBottom: "15px"}}>Is the business actively investing in research and development to improve the reliability and accuracy of its AI models, and does it prioritize the continuous enhancement of model performance?</td>
+      <td style={{paddingBottom: "15px"}}>Ensure that the business is actively investing in improving reliability and accuracy of AI models.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="8_1_3" value={props.data["8_1_3"]} onChange={(e)=>props.onChangeData("8_1_3",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
@@ -70,7 +70,7 @@
 </table>
 
 <h3 className="c-secondary">Testable Criteria 8.2.0: Model Reproducibility</h3>
-<b>Outcome: The company should ensure that the results are consistent and able to be replicated by the owner or third party to improve consumer trust.</b>
+<b>Outcome: The business should ensure that the results are consistent and able to be replicated by the business or third party to improve consumer trust.</b>
 
 <table>
   <tbody>
@@ -84,8 +84,8 @@
 
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>8.2.1</td>
-      <td style={{paddingBottom: "15px"}}>Has the company put in place methods to record the provenance of the AI model, including the various versions, configurations, data transformations, and underlying source code?</td>
-      <td style={{paddingBottom: "15px"}}>Ensure that documentations are kept for the different versions of the model.</td>
+      <td style={{paddingBottom: "15px"}}>Has the business put in place methods to record the provenance of the AI model, including the various versions, configurations, data transformations, and underlying source code?</td>
+      <td style={{paddingBottom: "15px"}}>Ensure that documentations are kept for the different versions of the model. </td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="8_2_1" value={props.data["8_2_1"]} onChange={(e)=>props.onChangeData("8_2_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
@@ -102,12 +102,12 @@
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>8.2.2</td>
       <td style={{paddingBottom: "15px"}}>
-        Has the company established a strategy for reproducing the input data used in the training process for every model?
+        Has the business established a strategy for reproducing the input data used in the training process for every model?
 
         Strategy includes:
-        - data cleaning, data processing, and feature engineering
-        - maintaining version control of the input data used for training the AI model, where possible; or
-        - avoiding changes to the raw data at the source and keeping track of the various stages or transformation steps that are part of the data pipeline for AI model development.
+          - data cleaning, data processing, and feature engineering
+          - maintaining version control of the input data used for training the AI model, where possible; or
+          - avoiding changes to the raw data at the source and keeping track of the various stages or transformation steps that are part of the data pipeline for AI model development.
       </td>
       <td style={{paddingBottom: "15px"}}>Ensure that the steps on cleaning of the raw input data used in the training process are documented and consistent across different model versions.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
@@ -125,7 +125,7 @@
 
         <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>8.2.3</td>
-      <td style={{paddingBottom: "15px"}}>Has the company conducted an assessment for repeatability by reviewing if the model produces a consistent output based on the same input?</td>
+      <td style={{paddingBottom: "15px"}}>Has the business conducted an assessment for repeatability by reviewing if the model produces a consistent output based on the same input? </td>
       <td style={{paddingBottom: "15px"}}>Ensure that the model is accurate and consistent to reproduce the same output results with the same input.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="8_2_3" value={props.data["8_2_3"]} onChange={(e)=>props.onChangeData("8_2_3",e.target.value)}>
