--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/diversity.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/diversity.mdx
@@ -18,8 +18,8 @@
 
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>6.1.1</td>
-      <td style={{paddingBottom: "15px"}}>Does the company offer a diverse range of business models for its AI models, including both open-source and closed-source options, to provide a wide array of choices for consumers, and to drive innovation across the market?</td>
-      <td style={{paddingBottom: "15px"}}>The company could consider providing both open and closed source models to drive innovation and provide more choices for consumers.  </td>
+      <td style={{paddingBottom: "15px"}}>Does the business offer a diverse range of business models for its AI models, including both open-source and closed-source options, to provide a wide array of choices for consumers, and to drive innovation across the market?</td>
+      <td style={{paddingBottom: "15px"}}>The business could consider providing both open and closed source models to drive innovation and provide more choices for consumers.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="6_1_1" value={props.data["6_1_1"]} onChange={(e)=>props.onChangeData("6_1_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
@@ -50,8 +50,8 @@
 
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>6.2.1</td>
-      <td style={{paddingBottom: "15px"}}>Does the company actively engage with the open-source community, seeking feedback and contributions to improve open-source AI models, and does it support collaborative development efforts to drive innovation and advancement in the field?</td>
-      <td style={{paddingBottom: "15px"}}>The company could consider actively engaging with the open-source community, seeking feedback and contributions to improve open-source AI models, supporting collaborative efforts.</td>
+      <td style={{paddingBottom: "15px"}}>Does the business actively engage with the open-source community, seeking feedback and contributions to improve open-source AI models, and does it support collaborative development efforts to drive innovation and advancement in the field?</td>
+      <td style={{paddingBottom: "15px"}}>The business could consider actively engaging with the open-source community, seeking feedback and contributions to improve open-source AI models, supporting collaborative efforts.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="6_2_1" value={props.data["6_2_1"]} onChange={(e)=>props.onChangeData("6_2_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
@@ -67,8 +67,8 @@
 
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>6.2.2</td>
-      <td style={{paddingBottom: "15px"}}>Does the company ensure that these open-source models are made accessible in a non-discriminatory manner that reduces barriers to entry and expansion?</td>
-      <td style={{paddingBottom: "15px"}}>Ensure that open-source models by the company are made accessible in a non-discriminatory manner that reduces barriers to entry and expansion.</td>
+      <td style={{paddingBottom: "15px"}}>Does the business ensure that these open-source models are made accessible in a non-discriminatory manner that reduces barriers to entry and expansion (eg. avoiding unjustified geographic or demographic restrictions)?</td>
+      <td style={{paddingBottom: "15px"}}>Ensure that open-source models by the business are made accessible in a non-discriminatory manner that reduces barriers to entry and expansion.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="6_2_2" value={props.data["6_2_2"]} onChange={(e)=>props.onChangeData("6_2_2",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
