--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/flexibility.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/inputs/flexibility.mdx
@@ -4,7 +4,7 @@
 </div>
 <br/>
 <h3 className="c-secondary">Testable Criteria 3.1.0: Lack of interoperability</h3>
-<b>Outcome: If the company considers itself to be dominant, its AI model should be interoperable with other AI systems to prevent the restriction of customer choice</b>
+<b>Outcome: A business’s AI model should be interoperable with other AI systems to prevent the restriction of customer choice</b>
 
 <table>
   <tbody>
@@ -18,7 +18,7 @@
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>3.1.1</td>
       <td style={{paddingBottom: "15px"}}>Does the AI model support open and standardized input formats, ensuring that it can seamlessly interface with and process data from different AI systems without requiring proprietary inputs?</td>
-      <td style={{paddingBottom: "15px"}}>The company should consider for AI model to support open and standardized input formats such that it can be interoperable with other AI systems.</td>
+      <td style={{paddingBottom: "15px"}}>The business should consider for AI model to support open and standardized input formats such that it can be interoperable with other AI systems.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="3_1_1" value={props.data["3_1_1"]} onChange={(e)=>props.onChangeData("3_1_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
@@ -33,7 +33,7 @@
     </tr>
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>3.1.2</td>
-      <td style={{paddingBottom: "15px"}}>Does the company adhere to data portability standards and best practices, ensuring that the AI model can effectively import and export data in commonly used formats, thereby enabling interoperability with diverse AI systems?</td>
+      <td style={{paddingBottom: "15px"}}>Does the business adhere to data portability standards (eg. data portability obligation under the PDPA), ensuring that the AI model can effectively import and export data in commonly used formats, thereby enabling interoperability with diverse AI systems?</td>
       <td style={{paddingBottom: "15px"}}>Ensure that AI model adheres to data portability standards and best practices.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="3_1_2" value={props.data["3_1_2"]} onChange={(e)=>props.onChangeData("3_1_2",e.target.value)}>
@@ -49,8 +49,8 @@
     </tr>
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>3.1.3</td>
-      <td style={{paddingBottom: "15px"}}>Does the company provide tools and resources, as much as technically feasible, to facilitate seamless model transition and interoperability? (e.g. standardized model formats, API compatibility, or mechanisms that reduce the cost of switching between different AI models without requiring users to retrain from scratch.)?</td>
-      <td style={{paddingBottom: "15px"}}>The company should consider providing tools for seamless data migration of trained parameters, eliminating the need to retrain the AI model, promoting interoperability.</td>
+      <td style={{paddingBottom: "15px"}}>Does the business provide tools and resources, as much as technically feasible, to facilitate seamless model transition and interoperability? (eg. standardized model formats, API compatibility, or mechanisms that reduce the cost of switching between different AI models without requiring users to retrain from scratch.)?</td>
+      <td style={{paddingBottom: "15px"}}>The business should consider providing tools for seamless data migration of trained parameters, eliminating the need to retrain the AI model, promoting interoperability.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="3_1_3" value={props.data["3_1_3"]} onChange={(e)=>props.onChangeData("3_1_3",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
@@ -67,7 +67,7 @@
 </table>
 
 <h3 className="c-secondary">Testable Criteria 3.2.0: High switching cost</h3>
-<b>Outcome: Consumers should not be locked in to one ecosystem or provider with high switching cost or prohibitive terms and conditions</b>
+<b>Outcome: Consumers should not be locked into one ecosystem or provider with high switching cost or prohibitive terms and conditions</b>
 
 <table>
   <tbody>
@@ -80,8 +80,8 @@
     </tr>
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>3.2.1</td>
-      <td style={{paddingBottom: "15px"}}>Does the company provide transparent and easily understandable information about the potential costs and requirements associated with switching to or from its AI models, ensuring that consumers are fully informed about the switching process?</td>
-      <td style={{paddingBottom: "15px"}}>Ensure that the company provides transparent and easily understandable information about the costs and requirements associated with switching.</td>
+      <td style={{paddingBottom: "15px"}}>Does the business provide transparent and easily understandable information about the potential costs and requirements associated with switching to or from its AI models, ensuring that consumers are fully informed about the switching process?</td>
+      <td style={{paddingBottom: "15px"}}>Ensure that the business provides transparent and easily understandable information about the costs and requirements associated with switching.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="3_2_1" value={props.data["3_2_1"]} onChange={(e)=>props.onChangeData("3_2_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
@@ -132,7 +132,7 @@
 </table>
 
 <h3 className="c-secondary">Testable Criteria 3.3.0: Anticompetitive bundling or tying</h3>
-<b>Outcome: The company should not be tying or bundling its product offerings in the same market or other adjacent markets anticompetitively</b>
+<b>Outcome: The business should not be tying or bundling its product offerings in the same market or other adjacent markets anticompetitively</b>
 
 <table>
   <tbody>
@@ -146,8 +146,8 @@
     
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>3.3.1</td>
-      <td style={{paddingBottom: "15px"}}>If the company is vertically integrated (e.g. company owns or controls multiple stages of its supply chain), does it ensure that its licensing or usage agreements does not require the specific use of its cloud services for deployment or operation?</td>
-      <td style={{paddingBottom: "15px"}}>Ensure that the AI model's licensing or usage agreements does not mandate the use of the company’s cloud services for deployment or operation.</td>
+      <td style={{paddingBottom: "15px"}}>If a business is vertically integrated (eg. owns or controls multiple stages of its supply chain), does it ensure that its licensing or usage agreements does not require the specific use of its cloud services for deployment or operation?</td>
+      <td style={{paddingBottom: "15px"}}>Ensure that the AI model's licensing or usage agreements does not mandate the use of the business’s cloud services for deployment or operation.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="3_3_1" value={props.data["3_3_1"]} onChange={(e)=>props.onChangeData("3_3_1",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
@@ -163,8 +163,8 @@
 
     <tr>
       <td style={{padding: "10px 10px 15px 10px"}}>3.3.2</td>
-      <td style={{paddingBottom: "15px"}}>If the company considers itself to be dominant, does the AI company offer its AI models as independent products, allowing consumers to select and utilize individual AI models without being required to purchase or use other bundled products?</td>
-      <td style={{paddingBottom: "15px"}}>Ensure that the dominant company offers its AI models as independent products, and consumers are able select and utilize individual AI models without being obligated to purchase or use other bundled products.</td>
+      <td style={{paddingBottom: "15px"}}>If the business is dominant, does it offer its AI models as independent products, allowing consumers to select and utilize individual AI models without being required to purchase or use other bundled products?</td>
+      <td style={{paddingBottom: "15px"}}>Ensure that the dominant business offers its AI models as independent products, and consumers are able select and utilize individual AI models without being obligated to purchase or use other bundled products.</td>
       <td style={{padding: "10px 10px 15px 10px"}}>
         <select style={{ backgroundColor: 'white', color: 'black' }} id="3_3_2" value={props.data["3_3_2"]} onChange={(e)=>props.onChangeData("3_3_2",e.target.value)}>
           <option value="" disabled selected>Select an option</option>
