--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/accessibility_UR_widget.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/accessibility_UR_widget.mdx
@@ -5,17 +5,17 @@ export const ib_cid = "accessibility"
 </div>
 <br/>
 <h2 className="c-primary">Testable Criteria 2.1.0: Restricting access to essential inputs</h2>
-<h3>Outcome: A dominant developer/deployer should not limit or exclude the access of  competing AI developers/deployers to   resources which are essential to the development of AI models (e.g. performance related hardware such as chips, proprietary training data, access to cloud services or specialized APIs).</h3><br/>
+<h3>Outcome: A dominant business should not limit or exclude the access of competing AI developers/deployers to   resources which are essential to the development of AI models (eg. performance related hardware such as chips, proprietary training data, access to cloud services or specialized APIs).</h3><br/>
 
 <table style={{border:"1px solid black", borderCollapse:"collapse"}}>
   <tr>
     <td style={{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">2.1.1\) Question</b><br/>
-      Does the company ensure that it does not use its dominant position in one market to unduly restrict access to data or resources necessary for competing AI model developers in other downstream markets?
+      If the business has a dominant position in any market, does the business ensure that it does not use its dominant position in one market to unduly restrict access to data or resources necessary for competing AI model developers in other downstream markets?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      Checks if the company has leveraged its dominance in one market to unfairly limit access to data or resources for competing AI model developers in other markets.
+      Checks if the business has leveraged its dominance in one market to unfairly limit access to data or resources for competing AI model developers in other markets.
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
@@ -36,11 +36,11 @@ export const ib_cid = "accessibility"
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">2.1.2\) Question</b><br/>
-      Does the company conduct regular assessments to evaluate its data access policies to allow competing AI model developers or new entrants to compete fairly?
+      If the business has a dominant position in any market, does the business conduct regular assessments to evaluate its data access policies to allow competing AI model developers or new entrants to compete fairly?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      Regular assessments of data access policies ensures that there are no unfair limitations to data or resources for developers in other markets. 
+      Regular assessments of data access policies ensures that there are no unfair limitations to data or resources for developers in other markets.  
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
@@ -61,7 +61,7 @@ export const ib_cid = "accessibility"
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">2.1.3\) Question</b><br/>
-      Does the AI developer ensure that there are no exclusive agreements with multiple downstream deployers which may potentially restrict new developers from operating at a viable scale and discourage market entry?
+      If the AI developer has a dominant position, does the AI developer ensure that there are no exclusive agreements with multiple downstream deployers which may potentially restrict new developers from operating at a viable scale and discourage market entry?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
@@ -83,17 +83,17 @@ export const ib_cid = "accessibility"
 <br/>
 
 <h2 className="c-primary">Testable Criteria 2.2.0: Restricting access of AI products and services</h2>
-<h3>Outcome: A dominant developer/deployer should not unjustifiably restrict access to its products and services</h3><br/>
+<h3>Outcome: A dominant business should not unjustifiably restrict access to its products and services</h3><br/>
 
 <table style={{border:"1px solid black", borderCollapse:"collapse"}}>
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">2.2.1\) Question</b><br/>
-      Does the company ensure non-discriminatory access to its AI products and services for downstream deployers and consumers?
+       If the business has a dominant position in any market, does the business ensure non-discriminatory access to its AI products and services for downstream deployers and consumers?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      Ensure that a dominant developer/deployer maintains non-discriminatory access to its AI products and services.
+      Ensure that a dominant business maintains non-discriminatory access to its AI products and services.
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
@@ -111,17 +111,17 @@ export const ib_cid = "accessibility"
 <br/>
 
 <h2 className="c-primary">Testable Criteria 2.3.0: Access to data</h2>
-<h3>Outcome: A dominant developer/deployer should not use data collection practices to unfairly restrict competition</h3><br/>
+<h3>Outcome: A dominant business should avoid data collection practices to unfairly restrict competition, especially where such collection is not necessary for provision of the product or the service</h3><br/>
 
 <table style={{border:"1px solid black", borderCollapse:"collapse"}}>
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">2.3.1\) Question</b><br/>
-      Where collection of data from users could be used to improve a company’s AI models and strengthen its market position, does the company ensure that it obtains explicit user consent for data collection and does not mandate data collection from users as a condition for accessing services without clear opt-out mechanisms?
+      If the business has a dominant position in any market and where the collection of data from users could be used to improve a business’s AI models and strengthen its market position, does the business ensure that it obtains explicit user consent for data collection and does not mandate data collection from users as a condition for accessing services without clear opt-out mechanisms?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      Ensure that a dominant developer/deployer does not make use of mandatory data collection practices to exclusively accumulate large amounts of user data to improve its AI models, potentially raising barriers to entry for competitors.
+      Ensure that a dominant business does not make use of mandatory data collection practices to exclusively accumulate large amounts of user data to improve its AI models, potentially raising barriers to entry for competitors.
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
