--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/accountability_UR_widget.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/accountability_UR_widget.mdx
@@ -4,18 +4,18 @@ export const ib_cid = "accountability"
   <h2>User Responses: Accountability (General good practice)</h2>
 </div>
 <br/>
-<h2 className="c-primary">Testable Criteria 7.1.0: Lack of adequate accountability by the company</h2>
+<h2 className="c-primary">Testable Criteria 7.1.0: Lack of adequate accountability by the business</h2>
 <h3>Outcome: There should be clear and proper allocation of accountability in the event that the model makes decisions that harms competition or consumers.</h3><br/>
 
 <table style={{border:"1px solid black", borderCollapse:"collapse"}}>
   <tr>
     <td style={{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">7.1.1\) Question</b><br/>
-      Are there mechanisms in place to determine the proper allocation of accountability and responsibility for any potential competition or consumer issues arising from the AI model (for e.g. clear internal governance mechanisms to ensure clear roles and responsibilities by the organisation and/or clear responsibilities between different parties within the broader supply chain – partners, suppliers, customers, third parties)?
+      Are there mechanisms in place to determine the proper allocation of accountability and responsibility for any potential competition or consumer issues arising from the AI model (for eg. clear internal governance mechanisms to ensure clear roles and responsibilities by the organisation and/or clear responsibilities between different parties within the broader supply chain – partners, suppliers, customers, third parties)?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      Ensure that the company has the accountability and incentive to improve consumers’ experience.
+      Ensure that the business has the accountability and incentive to improve consumers’ experience.
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
@@ -36,7 +36,7 @@ export const ib_cid = "accountability"
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">7.1.2\) Question</b><br/>
-      Does the company provide clear and easily accessible information to consumers about the available routes for should issues or negative experiences with AI products or services arise?
+      Does the business provide clear and easily accessible information to consumers about the available routes for should issues or negative experiences with AI products or services arise?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
