--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/accuracy_REC_widget.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/accuracy_REC_widget.mdx
@@ -13,10 +13,12 @@ export const Recommendation = ({ data02 }) => {
   let recommendation;
   if (noCount >= 1) {
     //Failed Test
-    recommendation = "The market would trend towards positive outcomes if the AI models were more accurate (e.g. reducing issues like hallucinations where models are producing inaccurate or misleading results and ensuring that predictions are replicable with the same input). When AI models produce inaccurate or misleading results, it could create issues for output reliability and consumer trust.\n\n\nThe company should ensure that mechanisms are in place to maintain accuracy and reduce misleading information. Additionally, the company can consider improving model reliability and accuracy, keeping documentation for all model versions, and maintaining consistent data cleaning procedures. The model should also produce consistent results with the same input. Some examples of good practices can include (i) allowing the model’s output to cite a particular source in its output if it is responding to a query, (ii) allowing users to verify a response, (iii) provide links to sources in its response or (iv) having established procedures to promptly identify and correct any errors or inaccuracies in the model's outputs.";
+    recommendation = `The market would trend towards positive outcomes if the AI models were more accurate (eg. reducing issues like hallucinations where models are producing inaccurate or misleading results and ensuring that predictions are replicable with the same input). When AI models produce inaccurate or misleading results, it could create issues for output reliability and consumer trust. 
+    The business should ensure that mechanisms are in place to maintain accuracy and reduce misleading information. Additionally, the business can consider improving model reliability and accuracy, keeping documentation for all model versions, and maintaining consistent data cleaning procedures. The model should also produce consistent results with the same input. Some examples of good practices can include (i) allowing the model’s output to cite a particular source in its output if it is responding to a query, (ii) allowing users to verify a response, (iii) provide links to sources in its response or (iv) having established procedures to promptly identify and correct any errors or inaccuracies in the model's outputs`;
   } else {
     //Passed Test
-    recommendation = "The market would trend towards positive outcomes if the AI models were more accurate (e.g. reducing issues like hallucinations where models are producing inaccurate or misleading results and ensuring that predictions are replicable with the same input). When AI models produce inaccurate or misleading results, it could create issues for output reliability and consumer trust.\n\n\nThe company has established robust measures to ensure the AI models produce reliable, accurate results,free from harmful or fake content. Additionally, the company ensures that outputs are consistent and replicable by both the owner and third parties, with clear, actionable processes in place for identifying, handling and correcting any errors or inaccuracies in the model's outputs.";
+    recommendation = `The market would trend towards positive outcomes if the AI models were more accurate (eg. reducing issues like hallucinations where models are producing inaccurate or misleading results and ensuring that predictions are replicable with the same input). When AI models produce inaccurate or misleading results, it could create issues for output reliability and consumer trust. 
+    The business has established robust measures to ensure the AI models produce reliable, accurate results, free from harmful or fake content. Additionally, the business ensures that outputs are consistent and replicable by both the owner and third parties, with clear, actionable processes in place for identifying, handling and correcting any errors or inaccuracies in the model's outputs.`;
   }
 
   return (
@@ -36,8 +38,8 @@ export const MissingCriteria = ({ data }) => {
     const questionsDict = {
         "8_1_1": "8.1.1 Ensure that mechanisms are in place to ensure that information generate is as accurate as possible and not misleading.",
         "8_1_2": "8.1.2 Ensure that there are established procedures to identify, address, and correct any errors or inaccuracies in the model's outputs in a timely manner.",
-        "8_1_3": "8.1.3 Ensure that the company is actively investing in improving reliability and accuracy of AI models.",
-        "8_2_1": "8.2.1 Ensure that documentations are kept for the different versions of the model. ",
+        "8_1_3": "8.1.3 Ensure that the business is actively investing in improving reliability and accuracy of AI models.",
+        "8_2_1": "8.2.1 Ensure that documentations are kept for the different versions of the model.",
         "8_2_2": "8.2.2 Ensure that the steps on cleaning of the raw input data used in the training process are documented and consistent across different model versions.",
         "8_2_3": "8.2.3 Ensure that the model is accurate and consistent to reproduce the same output results with the same input."
     };
@@ -111,7 +113,7 @@ export const MyComponent = (props) => {
                 <h2 className="c-primary">Principle: Accuracy (General good practice)</h2>
             </div>
             <h4 style={{paddingLeft: "10px", paddingRight: "10px"}}>
-                The outcome of this principle is to ensure that there is clear and proper allocation of accountability.
+                Brief overview of principle: Ensures AI models produce reliable, consistent, and reproducible results to maintain consumer trust. This includes regular testing, validation, and retraining of models to address performance degradation or model drift over time. This also includes documentation of information about the models, such as source codes and configurations. The market would trend towards positive outcomes if the AI models were more accurate (eg. reducing issues like hallucinations where models are producing inaccurate or misleading results and ensuring that predictions are replicable with the same input). When AI models produce inaccurate or misleading results, it could create issues for output reliability and consumer trust. 
             </h4>
             <div style={{ height:"400px", padding:"5px" }}>
                 <PieChart
