--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/fairness_UR_widget.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/fairness_UR_widget.mdx
@@ -5,20 +5,20 @@ export const ib_cid = "fairness"
 </div>
 <br/>
 <h2 className="c-primary">Testable Criteria 4.1.0: Discrimination against certain target groups</h2>
-<h3>Outcome: Ensure training data is diverse and representative to prevent potential AI-driven exclusionary practices  byfirms and  discriminatory treatment of consumers.</h3><br/>
+<h3>Outcome: Ensure training data is diverse and representative to prevent potential AI-driven exclusionary practices by firms and discriminatory treatment of consumers.</h3><br/>
 
 <table style={{border:"1px solid black", borderCollapse:"collapse"}}>
   <tr>
     <td style={{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">4.1.1\) Question</b><br/>
-      Has the company established a strategy or a set of procedures to check that the data used in the training of the AI model, is representative of the population who make up the end-users of the AI model? This could include, for example, ensuring:
+      Has the business established a strategy or a set of procedures to check that the data used in the training of the AI model, is representative of the population who make up the end-users of the AI model? This could include, for example, ensuring:
       - Diverse demographic representation to avoid bias
       - Adequate sample sizes for all relevant user segments
       - Regular data drifts and representation audits to maintain fairness over time
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      Ensure training data is diverse and representative in order to avoid biasness against certain groups, firms or individuals. 
+      Ensure training data is diverse and representative in order to avoid biasness against certain groups, firms or individuals.  
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
@@ -36,13 +36,13 @@ export const ib_cid = "fairness"
 <br/>
 
 <h2 className="c-primary">Testable Criteria 4.2.0: Favouring certain brands/products over others</h2>
-<h3>Outcome: If the company considers itself to be dominant, the company’s AI model should not unfairly prioritize or favour certain brands/products (including own products) over others without objective justifications.</h3><br/>
+<h3>Outcome: If the business is dominant, its AI model should not unfairly prioritize or favour certain brands/products (including own products) over others without objective justifications.</h3><br/>
 
 <table style={{border:"1px solid black", borderCollapse:"collapse"}}>
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">4.2.1\) Question</b><br/>
-      Is the AI model's decision-making process purely based on input data and does not unduly favour specific brands or products?
+      Is the dominant business’s AI model decision-making process purely based on input data and does not unduly favour specific brands or products?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
@@ -67,7 +67,7 @@ export const ib_cid = "fairness"
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">4.2.2\) Question</b><br/>
-      Does the AI model's decision-making process prioritise the company's own product as compared to other competitors?
+      Does the dominant business’s AI model decision-making process prioritise the business's own product as compared to other competitors?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
@@ -92,11 +92,11 @@ export const ib_cid = "fairness"
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">4.2.3\) Question</b><br/>
-      Does the AI model undergo regular bias testing and impact assessments to mitigate potential bias outcomes?
+      Does the dominant business’s AI model undergo regular bias testing and impact assessments to mitigate potential bias outcomes?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      Ensure that the company conducts regular bias testing and impact assessments to prevent favouring of certain brands/products.
+      Ensure that the business conducts regular bias testing and impact assessments to prevent favouring of certain brands/products.
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
@@ -117,11 +117,11 @@ export const ib_cid = "fairness"
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">4.2.4\) Question</b><br/>
-      Is there a mechanism in place to address and rectify any instances of favouritism or discrimination identified in the AI model's outputs?
+      Is there a mechanism in place to address and rectify any instances of favouritism or discrimination identified in the dominant business’s AI model's outputs?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      Ensure that the company has a clear mechanism for addressing and rectifying instances of favoritism or discrimination.
+      Ensure that the business has a clear mechanism for addressing and rectifying instances of favoritism or discrimination.
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
