--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/flexibility_REC_widget.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/flexibility_REC_widget.mdx
@@ -13,10 +13,14 @@ export const Recommendation = ({ data02 }) => {
   let recommendation;
   if (noCount >= 1) {
     //Failed Test
-    recommendation = "The market will tend towards more positive outcomes if the AI systems are interoperable with one another and there are no/little barriers introduced by developers or deployers to impede users from uploading/downloading, extracting and porting their information to rival services.\nFor the market to be more competitive, the best products and services should win out and not be restricted by anti-competitive tying or bundling. Additionally, vertical integration and partnerships should not be a means of insulating firms from competition.\nThe company could consider increasing the interoperability of its AI system such that users may easily switch or multi-home to benefit from the diversity in AI model offerings. If the company considers itself to be dominant, the company should (i) avoid engaging in tying/bundling or implementing high switching cost for its customers and/or (ii) review the AI algorithm to avoid potentially infringing Section 47 of the Competition Act, which prohibits the abuse of a dominant market position that is not based on fair competition and perpetuates the dominant position of the business.";
+    recommendation = `The market will tend towards more positive outcomes if the AI systems are interoperable with one another and there are no/little barriers introduced by developers or deployers to impede users from uploading/downloading, extracting and porting their information to rival services.
+    For the market to be more competitive, the best products and services should win out and not be restricted by anti-competitive tying or bundling. Additionally, vertical integration and partnerships should not be a means of insulating firms from competition.
+    The business could consider increasing the interoperability of its AI system such that users may easily switch or multi-home to benefit from the diversity in AI model offerings. If the business is dominant, the business should (i) avoid engaging in tying/bundling or implementing high switching cost for its customers and/or (ii) review the AI algorithm to avoid potentially infringing Section 47 of the Competition Act, which prohibits the abuse of a dominant market position that is not based on fair competition and perpetuates the dominant position of the business.`;
   } else {
     //Passed Test
-    recommendation = "The market will tend towards more positive outcomes if the AI systems are interoperable with one another and there are no/little barriers introduced by developers or deployers to impede users from uploading/downloading, extracting and porting their information to rival services.\nFor the market to be more competitive, products and services should compete on their merits and not be restricted by anti-competitive tying or bundling. Additionally, vertical integration and partnerships should not be a means of insulating firms from competition.\nThe company has ensured that its AI model is interoperable with other systems. It has also taken steps to avoid locking consumers into a single ecosystem and does not engage in anti-competitive tying or bundling practices.";
+    recommendation = `The market will tend towards more positive outcomes if the AI systems are interoperable with one another and there are no/little barriers introduced by developers or deployers to impede users from uploading/downloading, extracting and porting their information to rival services.
+    For the market to be more competitive, products and services should compete on their merits and not be restricted by anti-competitive tying or bundling. Additionally, vertical integration and partnerships should not be a means of insulating firms from competition.
+    The business has ensured that its AI model is interoperable with other systems. It has also taken steps to avoid locking consumers into a single ecosystem and does not engage in anti-competitive tying or bundling practices.`;
   }
 
   return (
@@ -29,14 +33,14 @@ export const Recommendation = ({ data02 }) => {
 
 export const MissingCriteria = ({ data }) => {
     const questionsDict = {
-        "3_1_1": "3.1.1 The company should consider for AI model to support open and standardized input formats such that it can be interoperable with other AI systems.",
+        "3_1_1": "3.1.1 The business should consider for AI model to support open and standardized input formats such that it can be interoperable with other AI systems.",
         "3_1_2": "3.1.2 Ensure that AI model adheres to data portability standards and best practices.",
-        "3_1_3": "3.1.3 The company should consider providing tools for seamless data migration of trained parameters, eliminating the need to retrain the AI model, promoting interoperability.",
-        "3_2_1": "3.2.1 Ensure that the company provides transparent and easily understandable information about the costs and requirements associated with switching.",
+        "3_1_3": "3.1.3 The business should consider providing tools for seamless data migration of trained parameters, eliminating the need to retrain the AI model, promoting interoperability.",
+        "3_2_1": "3.2.1 Ensure that the business provides transparent and easily understandable information about the costs and requirements associated with switching.",
         "3_2_2": "3.2.2 Ensure provisions are in place to facilitate the portability of data and configurations when switching to or from the AI model, minimizing data migration expenses.",
         "3_2_3": "3.2.3 Having clear exit strategies that enable consumers to switch AI models without being unduly tied to a specific provider.",
-        "3_3_1": "3.3.1 Ensure that the AI model's licensing or usage agreements does not mandate the use of the company’s cloud services for deployment or operation.",
-        "3_3_2": "3.3.2 Ensure that the dominant company offers its AI models as independent products, and consumers are able select and utilize individual AI models without being obligated to purchase or use other bundled products.",
+        "3_3_1": "3.3.1 Ensure that the AI model's licensing or usage agreements does not mandate the use of the business’s cloud services for deployment or operation.",
+        "3_3_2": "3.3.2 Ensure that the dominant business offers its AI models as independent products, and consumers are able select and utilize individual AI models without being obligated to purchase or use other bundled products.",
     };
 
     const noResponses = data
@@ -110,7 +114,7 @@ export const MyComponent = (props) => {
                 <h2 className="c-primary">Principle: Flexibility (Competition)</h2>
             </div>
             <h4 style={{paddingLeft: "10px", paddingRight: "10px"}}>
-                The outcome of this principle is to ensure that the AI model is interoperable with other AI systems, and that there are no/little barriers introduced by developers or deployers to impede users from uploading/downloading, extracting and porting their information to rival services. Additionally, vertical integration and partnerships should not be a means of insulating firms from competition.
+                Brief overview of principle: Promotes interoperability between AI systems and prevents high switching costs or anti-competitive bundling. The market will tend towards more positive outcomes if the AI systems are interoperable with one another and there are no/little barriers introduced by developers or deployers to impede users from uploading/downloading, extracting and porting their information to rival services. For the market to be more competitive, products and services should compete on their merits and not be restricted by anti-competitive tying or bundling. Additionally, vertical integration and partnerships should not be a means of insulating firms from competition.
             </h4>
             <div style={{ height:"400px", padding:"5px" }}>
                 <PieChart
