--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/flexibility_UR_widget.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/flexibility_UR_widget.mdx
@@ -5,7 +5,7 @@ export const ib_cid = "flexibility"
 </div>
 <br/>
 <h2 className="c-primary">Testable Criteria 3.1.0: Lack of interoperability</h2>
-<h3>Outcome: If the company considers itself to be dominant, its AI model should be interoperable with other AI systems to prevent the restriction of customer choice</h3><br/>
+<h3>Outcome: A business’s AI model should be interoperable with other AI systems to prevent the restriction of customer choice</h3><br/>
 
 <table style={{border:"1px solid black", borderCollapse:"collapse"}}>
   <tr>
@@ -15,7 +15,7 @@ export const ib_cid = "flexibility"
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      The company should consider for AI model to support open and standardized input formats such that it can be interoperable with other AI systems.
+      The business should consider for AI model to support open and standardized input formats such that it can be interoperable with other AI systems.
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
@@ -36,7 +36,7 @@ export const ib_cid = "flexibility"
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">3.1.2\) Question</b><br/>
-      Does the company adhere to data portability standards and best practices, ensuring that the AI model can effectively import and export data in commonly used formats, thereby enabling interoperability with diverse AI systems?
+      Does the business adhere to data portability standards (eg. data portability obligation under the PDPA), ensuring that the AI model can effectively import and export data in commonly used formats, thereby enabling interoperability with diverse AI systems?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
@@ -61,11 +61,11 @@ export const ib_cid = "flexibility"
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">3.1.3\) Question</b><br/>
-      Does the company provide tools and resources, as much as technically feasible, to facilitate seamless model transition and interoperability? (e.g. standardized model formats, API compatibility, or mechanisms that reduce the cost of switching between different AI models without requiring users to retrain from scratch.)?
+      Does the business provide tools and resources, as much as technically feasible, to facilitate seamless model transition and interoperability? (eg. standardized model formats, API compatibility, or mechanisms that reduce the cost of switching between different AI models without requiring users to retrain from scratch.)?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      The company should consider providing tools for seamless data migration of trained parameters, eliminating the need to retrain the AI model, promoting interoperability.
+      The business should consider providing tools for seamless data migration of trained parameters, eliminating the need to retrain the AI model, promoting interoperability.
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
@@ -83,17 +83,17 @@ export const ib_cid = "flexibility"
 <br/>
 
 <h2 className="c-primary">Testable Criteria 3.2.0: High switching cost</h2>
-<h3>Outcome: Consumers should not be locked in to one ecosystem or provider with high switching cost or prohibitive terms and conditions</h3><br/>
+<h3>Outcome: Consumers should not be locked into one ecosystem or provider with high switching cost or prohibitive terms and conditions</h3><br/>
 
 <table style={{border:"1px solid black", borderCollapse:"collapse"}}>
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">3.2.1\) Question</b><br/>
-      Does the company provide transparent and easily understandable information about the potential costs and requirements associated with switching to or from its AI models, ensuring that consumers are fully informed about the switching process?
+      Does the business provide transparent and easily understandable information about the potential costs and requirements associated with switching to or from its AI models, ensuring that consumers are fully informed about the switching process?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      Ensure that the company provides transparent and easily understandable information about the costs and requirements associated with switching.
+      Ensure that the business provides transparent and easily understandable information about the costs and requirements associated with switching.
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
@@ -161,17 +161,17 @@ export const ib_cid = "flexibility"
 <br/>
 
 <h2 className="c-primary">Testable Criteria 3.3.0: Anticompetitive bundling or tying</h2>
-<h3>Outcome: The company should not be tying or bundling its product offerings in the same market or other adjacent markets anticompetitively</h3><br/>
+<h3>Outcome: The business should not be tying or bundling its product offerings in the same market or other adjacent markets anticompetitively</h3><br/>
 
 <table style={{border:"1px solid black", borderCollapse:"collapse"}}>
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">3.3.1\) Question</b><br/>
-      If the company is vertically integrated (e.g. company owns or controls multiple stages of its supply chain), does it ensure that its licensing or usage agreements does not require the specific use of its cloud services for deployment or operation?
+      If a business is vertically integrated (eg. owns or controls multiple stages of its supply chain), does it ensure that its licensing or usage agreements does not require the specific use of its cloud services for deployment or operation?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      Ensure that the AI model's licensing or usage agreements does not mandate the use of the company’s cloud services for deployment or operation.
+      Ensure that the AI model's licensing or usage agreements does not mandate the use of the business’s cloud services for deployment or operation.
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
@@ -192,11 +192,11 @@ export const ib_cid = "flexibility"
   <tr>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">3.3.2\) Question</b><br/>
-      If the company considers itself to be dominant, does the AI company offer its AI models as independent products, allowing consumers to select and utilize individual AI models without being required to purchase or use other bundled products?
+      If the business is dominant, does it offer its AI models as independent products, allowing consumers to select and utilize individual AI models without being required to purchase or use other bundled products?
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Relation to Outcome</b><br/>
-      Ensure that the dominant company offers its AI models as independent products, and consumers are able select and utilize individual AI models without being obligated to purchase or use other bundled products.
+      Ensure that the dominant business offers its AI models as independent products, and consumers are able select and utilize individual AI models without being obligated to purchase or use other bundled products.
     </td>
     <td style= {{border:"1px solid black", borderCollapse:"collapse", padding: "0px 15px 0px"}}>
       <b className="c-secondary">Response</b><br/>
