--- a/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/pro_competitive_algo_REC_widget.mdx
+++ b/third-party-plugins/cccs_plugins/cccs_process_checklist/widgets/pro_competitive_algo_REC_widget.mdx
@@ -13,10 +13,12 @@ export const Recommendation = ({ data02 }) => {
   let recommendation;
   if (noCount >= 1) {
     //Failed Test
-    recommendation = "The company’s AI algorithm may be engaging in algorithmic collusion if the algorithm is designed to coordinate changes with other competitors and/or facilitate anti-competitive agreements. To avoid potentially infringing section 34 of the Competition Act, which prohibits agreements that prevent, restrict, or distort competition within Singapore, the company should review and consider incorporating a more diverse set of factors or practices that are not derived from other companies’ business models or decisions.\n\nAdditionally, the company’s AI algorithm could be engaging in algorithmic exclusion or predation through the implementation of below cost pricing or loyalty-inducing algorithms. If the company considers itself to be dominant, it should review the AI algorithm for any instances of below cost pricing or loyalty-inducing tendencies to avoid potentially infringing section 47 of the Competition Act, which prohibits the abuse of a dominant market position that is not based on fair competition and perpetuates the dominant position of the business.";
+    recommendation = `The business’s AI algorithm may be engaging in algorithmic collusion if the algorithm is designed to coordinate changes with other competitors and/or facilitate anti-competitive agreements. The potential absence of proper safeguards, human oversight, and the use of competitors' sensitive data could increase the risk of anti-competitive behaviour, particularly when similar AI models are deployed across the industry. To avoid potentially infringing section 34 of the Competition Act, which prohibits agreements that prevent, restrict, or distort competition within Singapore, the business should review and consider incorporating a more diverse set of factors or practices that are not derived from other businesses’ models or decisions. The business should also implement safeguards to prevent the sharing of commercially sensitive data and model parameters between competitors, and ensure proper human oversight of AI outputs to detect potential collusive behaviour. Where the same AI model is widely used across competitors, additional measures should be taken to prevent anti-competitive coordination of business decisions. 
+    Additionally, the business’s AI algorithm could be engaging in algorithmic exclusion or predation through the implementation of below cost pricing or loyalty-inducing algorithms. If the business is dominant, it should review the AI algorithm for any instances of below cost pricing or loyalty-inducing tendencies to avoid potentially infringing section 47 of the Competition Act, which prohibits the abuse of a dominant market position that is not based on fair competition and perpetuates the dominant position of the business.`
+;
   } else {
     //Passed Test
-    recommendation = "The company has taken steps to ensure that the AI algorithm does not engage in algorithmic collusion or suggest pricing strategies that lead to exclusionary or predatory practices. It has implemented effective oversight and control measures to monitor the AI algorithm, and safeguards have been established to prevent model parameters from being shared through channels (such as one-to-one interactions or industry association gatherings) between competitors.";
+    recommendation = "The business has taken steps to ensure that the AI algorithm does not engage in algorithmic collusion or suggest pricing strategies that lead to exclusionary or predatory practices. It has implemented effective oversight and control measures to monitor the AI algorithm, and safeguards have been established to prevent model parameters from being shared through channels (such as one-to-one interactions or industry association gatherings) between competitors.";
   }
 
   return (
@@ -29,15 +31,18 @@ export const Recommendation = ({ data02 }) => {
 
 export const MissingCriteria = ({ data }) => {
     const questionsDict = {
-        "1_1_1": "1.1.1 The company’s algorithm should not be designed to coordinate changes with other competitors and/or facilitating any anti-competitive agreements.",
-        "1_1_2": "1.1.2 Regular audits and reviews of the AI model help to detect and prevent instances where the AI model is facilitating coordination with other competitors.",
-        "1_1_3": "1.1.3 Clear protocols to be put in place for addressing potential algorithmic collusion behaviour.",
-        "1_1_4": "1.1.4 Prevent the sharing of commercially sensitive model parameters with competitors through channels such as one-to-one interactions or industry association gatherings.",
-        "1_2_1": "1.2.1 Below-cost pricing by a dominant market player could be anti-competitive and harm competition.\nTransparency and traceability in the AI model's pricing algorithms to identify instances of below-cost pricing can ensure that pricing strategies are not predatory.",
-        "1_2_2": "1.2.2 Below-cost pricing by a dominant market player could be anti-competitive and harm competition.\n\nRegular audits and reviews of the AI model help detect and prevent instances of below-cost pricing.",
-        "1_2_3": "1.2.3 Below-cost pricing by a dominant market player could be anti-competitive and harm competition.\nConsidering relevant cost factors and market conditions in the AI model's pricing algorithm helps avoid setting prices below a reasonable cost threshold.",
-        "1_2_4": "1.2.4 Below-cost pricing by a dominant market player could be anti-competitive and harm competition.\nMonitoring and addressing feedback ensure accountability and responsiveness to any predatory behavior.",
-        "1_2_5": "1.2.5 Checks whether a dominant company has deployed a model with loyalty inducing algorithms that may have exclusionary effects, deterring entry of new AI developers and harming competition if the company has a dominant market position.",
+        "1_1_1": "1.1.1 The business’s algorithm should not be designed to coordinate changes with other competitors and/or facilitating any anti-competitive agreements.",
+        "1_1_2": "1.1.2 The business should ensure that the AI model does not access or process competitors’ non-public, commercially sensitive information in their output, which may facilitate algorithmic collusion.",
+        "1_1_3": "1.1.3 AI outputs should be reviewed by a human before the AI model is deployed to reduce any risk of unintended anti-competitive outcomes.",
+        "1_1_4": "1.1.4 Regular audits and reviews of the AI model help to detect and prevent instances where the AI model is facilitating coordination with other competitors.",
+        "1_1_5": "1.1.5 Clear protocols to be put in place for addressing potential algorithmic collusion behaviour.",
+        "1_1_6": "1.1.6 Where the AI model is widely used by competitors, the business should ensure that its model operates independently and does not share data or outputs with competitors, as this may increase algorithmic collusion risks. ",
+        "1_1_7": "1.1.7 Prevent the sharing of commercially sensitive model parameters with competitors through channels such as one-to-one interactions or industry association gatherings.",
+        "1_2_1": "1.2.1 Below-cost pricing by a dominant business could be anti-competitive and harm competition. Transparency and traceability in the AI model's pricing algorithms to identify instances of below-cost pricing can ensure that pricing strategies are not predatory.",
+        "1_2_2": "1.2.2 Below-cost pricing by a dominant business could be anti-competitive and harm competition. Regular audits and reviews of the AI model help detect and prevent instances of below-cost pricing.",
+        "1_2_3": "1.2.3 Below-cost pricing by a dominant business could be anti-competitive and harm competition. Considering relevant cost factors and market conditions in the AI model's pricing algorithm helps avoid setting prices below a reasonable cost threshold.",
+        "1_2_4": "1.2.4 Below-cost pricing by a dominant business could be anti-competitive and harm competition. Monitoring and addressing feedback ensure accountability and responsiveness to any predatory behavior.",
+        "1_2_5": "1.2.5 Checks whether a dominant business has deployed a model with loyalty inducing algorithms that may have exclusionary effects, deterring entry of new AI developers and harming competition if the business has a dominant market position.",
     };
 
     const noResponses = data
@@ -70,6 +75,9 @@ export const MyComponent = (props) => {
             props.getIBData(ib_cid)["1_1_2"],
             props.getIBData(ib_cid)["1_1_3"],
             props.getIBData(ib_cid)["1_1_4"],
+            props.getIBData(ib_cid)["1_1_5"],
+            props.getIBData(ib_cid)["1_1_6"],
+            props.getIBData(ib_cid)["1_1_7"],
             props.getIBData(ib_cid)["1_2_1"],
             props.getIBData(ib_cid)["1_2_2"],
             props.getIBData(ib_cid)["1_2_3"],
@@ -89,6 +97,7 @@ export const MyComponent = (props) => {
 
         const ids = [
             "1_1_1", "1_1_2", "1_1_3", "1_1_4",
+            "1_1_5", "1_1_6", "1_1_7",
             "1_2_1", "1_2_2", "1_2_3", "1_2_4",
             "1_2_5"
         ];
@@ -114,7 +123,7 @@ export const MyComponent = (props) => {
                 <h2 className="c-primary">Principle: Pro-competitive algorithms (Competition)</h2>
             </div>
             <h4 style={{paddingLeft: "10px", paddingRight: "10px"}}>
-                The outcome of this principle is to ensure that your AI model is not recommending pricing strategies solely based on another company's buisness model.
+                Brief overview of principle: Ensures AI algorithms do not facilitate anti-competitive practices like price collusion or predatory pricing. This includes avoiding algorithmic designs that could lead to coordination between competitors, the sharing or replication of commercially sensitive information, or the manipulation of market conditions in a way that restricts competition.
             </h4>
             <div style={{ height:"400px", padding:"5px" }}>
                 <PieChart
